--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <!-- jQuery (obligatoire pour les plugins JavaScript de Bootstrap) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- JavaScript de Bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -45,11 +45,11 @@
     <div class="container-fluid">
         <div class="row">
             <form style="margin:50px;">
-                <div class="form-group has-error">
+                <div class="form-group ">
                     <label for="name">name</label>
-                    <input type="text" id="name" class="form-control">
+                    <input type="text" id="name" class="form-control" imput-lg>
                 </div>
-                <div class="form-group">
+                <div class="form-group has-error">
                     <label for="email">Email</label>
                     <input type="text" id="email" class="form-control">
                 </div>
@@ -67,6 +67,51 @@
             </form>
         </div>
     </div>
-</body>
+<div class="container" style="margin-top:50px;">
+    <button type="button" class="btn btn-default">default
+    </button>
+    <button type="button" class="btn btn-primary active">primary 1
+    </button>
+    <button type="button" class="btn btn-primary btn-block">Primary 2
+    </button>
+    <div class="btn-group-vertical">
+        <button type="button" class="btn btn-success btn-lg">Success 1
+        </button>
+        <button type="button" class="btn btn-success disabled">success 2
+        </button>
+    </div>
+    <button type="button" class="btn btn-info btn-md">Info
+    </button>
+    <button type="button" class="btn btn-warning btn-xs">Warning
+    </button> 
+    <button type="button" class="btn btn-danger btn-sm">Danger
+    </button>
+    <button type="button" class="btn btn-link">Link
+    </button>
+</div>
+<div class="dropdown">
+    <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">Fruits</button>
+    <ul class="dropdown-menu">
+        <li><a href="#">Banane</a></li>
+        <li><a href="#">Pomme</a></li>
+        <li><a href="#">Poire</a></li>
+        <li><a href="#">Orange</a></li>
+    </ul>
+</div>
+<div class="container" style="margin-top:50px;">
+    <img src="mariage.jpg" class="img-rounded">
+</div>
+<div class="container" style="margin-top:50px;">
+    <img src="mariage.jpg" class="rounded-circle">
+    <img src="mariage.jpg" class="img-thumbnail img-reponsive">
+</div>
+<div class="container" style="margin-top:50px">
+    <a href="#" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>
+        search</a>
+    <a href="#" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-print"></span>
+        print</a>
+</div>
+
+</body> 
 
 </html>
